src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Power__c</fullName>
        <formula>(200 -  Current_Total_Salary__c) - (20 - Number_of_players__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Total_Salary__c</fullName>
        <label>Current Total Salary</label>
        <summarizedField>Player__c.Salary__c</summarizedField>
        <summaryForeignKey>Player__c.Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trash Talkers</fullName>
                </value>
                <value>
                    <fullName>Garbage Givers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_players__c</fullName>
        <label>Number of players</label>
        <summaryForeignKey>Player__c.Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Projected_salary__c</fullName>
        <label>Projected_salary</label>
        <summarizedField>Player__c.Next_Year_Salary__c</summarizedField>
        <summaryForeignKey>Player__c.Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <formula>If(MONTH(TODAY()) &gt;7, TEXT(YEAR(TODAY())+ 1),TEXT(YEAR(TODAY())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Season</label>
        <type>Text</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>